feat: set websocket setting
