# models/user_basic.go
@@ -12,11 +12,14 @@ type UserBasic struct {
 	gorm.Model
 	Name          string
 	Password      string
-	Phone         string
-	Email         string
+	Phone         string `valid:"matches(^09\\d{8}$)"`
+	Email         string `valid:"email"`
 	Identity      string
+	Age           int
+	Sex           string
 	ClientID      string
 	ClientPort    string
+	Salt          string
 	LoginTime     time.Time
 	HeartbeatTime time.Time
 	LoginOutTime  time.Time `gorm:"column: login_out_time" json:"login_out_time"`
@@ -36,4 +39,41 @@ func GetUserList() []*UserBasic {
 		fmt.Println(v)
 	}
 	return data
+}
+
+func FindUserByNameAndPwd(name, password string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("name = ? and password=?", name, password).First(&user)
+	str := fmt.Sprintf("%d", time.Now().Unix())
+	temp := utils.MD5Encode(str)
+	utils.DB.Model(&user).Where("id = ?", user.ID).Update("Identity", temp)
+	return user
+}
+
+func FindUserName(userName string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("name = ?", userName).First(&user)
+	return user
+}
+
+func FindUserPhone(userPhone string) *gorm.DB {
+	user := UserBasic{}
+	return utils.DB.Where("phone = ?", userPhone).First(&user)
+}
+
+func FindUserEmail(userEmail string) *gorm.DB {
+	user := UserBasic{}
+	return utils.DB.Where("email = ?", userEmail).First(&user)
+}
+
+func CreateUser(user UserBasic) *gorm.DB {
+	return utils.DB.Create(&user)
+}
+
+func DeleteUser(user UserBasic) *gorm.DB {
+	return utils.DB.Delete(&user)
+}
+
+func UpdateUser(user UserBasic) *gorm.DB {
+	return utils.DB.Model(&user).Updates(UserBasic{Name: user.Name, Password: user.Password, Phone: user.Phone, Email: user.Email})
 }
