# router/router.go
@@ -15,8 +15,17 @@ import (
 func Router() *gin.Engine {
 	r := gin.Default()
 	docs.SwaggerInfo.BasePath = "/"
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	r.GET("/index", service.GetIndex)
 	r.GET("/user/getUserData", service.GetUserList)
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
+	r.POST("/user/createUser", service.CreateUser)
+	r.POST("/user/deleteUser", service.DeleteUser)
+	r.PATCH("/user/updateUser", service.UpdateUser)
+	r.POST("/user/find-user-by-name-pwd", service.FindUserByNameAndPwd)
+
+	//websocket
+	r.GET("/user/sendMsg", service.SendMsg)
+	r.GET("/user/sendUserMsg", service.SendUserMsg)
+
 	return r
 }
